2nd day homework

--- a/contacts.html
+++ b/contacts.html
@@ -2,36 +2,39 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" lang="ru" content="Автозапчасти для иномарок, запчасти для ВАЗ, ГАЗ, Москвич в Нижнем Новгороде - магазин автозапчастей">
+    <meta name="description" lang="ru"
+          content="Автозапчасти для иномарок, запчасти для ВАЗ, ГАЗ, Москвич в Нижнем Новгороде ">
     <title>Как нас найти</title>
+    <link rel="stylesheet" href="css/basic.css">
 </head>
-<body>
-<header>
-    <h1> Автозапчасти для иномарок, запчасти для ВАЗ, ГАЗ, Москвич в Нижнем Новгороде - магазин автозапчастей </h1>
-    <nav><h2>
-        <a href="./index.html">Главная</a>
-        <a href="./price.html">Прайс</a>
-        <a href="./contacts.html">Контакты</a>
-    </h2>
-    </nav>
+<body class="background">
+<header class="header">
+    <h1> Автозапчасти для иномарок, запчасти для ВАЗ, ГАЗ, Москвич в Нижнем Новгороде </h1>
+    <div class="menu">
+        <nav>
+            <span class="menu-item"><a href="./index.html">Главная</a></span>
+            <span class="menu-item"><a href="./price.html">Прайс</a></span>
+            <span class="menu-item"><a href="./contacts.html">Контакты</a></span>
+        </nav>
+    </div>
 </header>
+<div class="content">
+    <h2> Как нас найти </h2>
+    <p class="caption"> МАГАЗИН 1 - РЯБЦЕВА, 15</p>
 
-<h1> Как нас найти </h1>
-<h2>МАГАЗИН 1 - РЯБЦЕВА, 15</h2>
-
-<p><b>Запчасти для марок машин:</b> ВАЗ, НИВА
-Масла, аксессуары, инструмент
-</p>
-<p>
-    <b>Телефоны:</b> 270-56-34, 274-33-46 (многоканальный)<br>
-    <b>Отдел ИНОМАРКА</b><br>
-    <b>Телефоны:</b> 270-56-34, 415-07-80<br>
-    <b>E-mail:</b> filatov_R15@mail.ru<br>
-    <b>ICQ:</b> 632 841 920<br>
-</p>
-<footer>
-        <b> +7 (831) 274-00-77
-        </b>
+    <p><span class="strong-text">Запчасти для марок машин:</span> ВАЗ, НИВА
+        Масла, аксессуары, инструмент
+    </p>
+    <p>
+        <span class="strong-text">Телефоны:</span> 270-56-34, 274-33-46 (многоканальный)<br>
+        <span class="strong-text">Отдел ИНОМАРКА</span><br>
+        <span class="strong-text">Телефоны:</span> 270-56-34, 415-07-80<br>
+        <span class="strong-text">E-mail:</span> filatov_R15@mail.ru<br>
+        <span class="strong-text">ICQ:</span> 632 841 920<br>
+    </p>
+</div>
+<footer class="footer">
+    &copy <a href=https://github.com/nberezina/metaWebDesign>nberezina</a>
 </footer>
 </body>
 </html>
