--- a/index.html
+++ b/index.html
@@ -2,24 +2,49 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" lang="ru" content="Автозапчасти для иномарок, запчасти для ВАЗ, ГАЗ, Москвич в Нижнем Новгороде - магазин автозапчастей">
-    <title>Автозапчасти для иномарок, запчасти для ВАЗ, ГАЗ, Москвич в Нижнем Новгороде - магазин автозапчастей</title>
+    <meta name="description" lang="ru"
+          content="Автозапчасти для иномарок, запчасти для ВАЗ, ГАЗ, Москвич в Нижнем Новгороде">
+    <title>Автозапчасти для иномарок, запчасти для ВАЗ, ГАЗ, Москвич в Нижнем Новгороде</title>
+    <link rel="stylesheet" href="css/basic.css">
 </head>
-<body>
-<header>
-    <h1> Автозапчасти для иномарок, запчасти для ВАЗ, ГАЗ, Москвич в Нижнем Новгороде - магазин автозапчастей </h1>
-    <nav><h2>
-        <a href="./index.html">Главная</a>
-        <a href="./price.html">Прайс</a>
-        <a href="./contacts.html">Контакты</a>
-    </h2>
-    </nav>
-    <article><h2>Немного истории отечественных автозаводов</h2></article>
-    <p>Количество автомобилей в Нижнем Новгороде увеличивается ежегодно, что порождает постоянный спрос на автозапчасти. Спрос растет как на автозапчасти для автомобилей отечественного производства, такие как ВАЗ, ГАЗ, ИЖ, так и на автозапчасти для иномарок. Именно поэтому нашей фирмой создана целая сеть современных магазинов автозапчастей в Нижнем Новгороде. В наших магазинах работают крупные отделы, в которых всегда представлен огромный выбор автозапчастей для иномарок и отечественных автомобилей. Благодаря плотной и грамотной работе с поставщиками, наша ценовая политика представлена на самом доступном уровне. Все наши сотрудники проходят постоянное обучение, повышая при этом не только уровень своей профессиональности, но и уровень обслуживания покупателей. Уникальная система скидок для постоянных покупателей, разработанная нами и успешно работающая в наших магазинах, прекрасно сочетается с широким ассортиментом автозапчастей. Самое главное для нас то, чтобы Ваш автомобиль всегда был в рабочем состоянии, поэтому в наших магазинах Вы найдете все, что для этого нужно, а наши продавцы с радостью помогут Вам в этом, независимо от того, какой автомобиль у Вас – иномарка или отечественный.
-    </p>
-</header>
-<footer>
-        <b> +7 (831) 274-00-77</b>
-</footer>
+<body class="background">
+    <header class="header">
+        <h1> Автозапчасти для иномарок, запчасти для ВАЗ, ГАЗ, Москвич в Нижнем Новгороде </h1>
+            <div class="menu">
+                <nav>
+                    <span class="menu-item">
+                    <a href="./index.html">Главная</a>
+                    </span>
+                    <span class="menu-item">
+                    <a href="./price.html">Прайс</a>
+                        </span>
+                    <span class="menu-item">
+                    <a href="./contacts.html">Контакты</a>
+                        </span>
+                </nav>
+            </div>
+    </header>
+
+    <div class="content">
+            <article><h2>Немного об истории отечественных автозаводов</h2>
+                <p class="article">Количество автомобилей в Нижнем Новгороде увеличивается ежегодно, что порождает постоянный спрос на
+                    автозапчасти. Спрос растет как на автозапчасти для автомобилей отечественного производства, такие
+                    как ВАЗ, ГАЗ, ИЖ, так и на автозапчасти для иномарок. Именно поэтому нашей фирмой создана целая сеть
+                    современных магазинов автозапчастей в Нижнем Новгороде. В наших магазинах работают крупные отделы, в
+                    которых всегда представлен огромный выбор автозапчастей для иномарок и отечественных автомобилей.
+                    Благодаря плотной и грамотной работе с поставщиками, наша ценовая политика представлена на самом
+                    доступном уровне. Все наши сотрудники проходят постоянное обучение, повышая при этом не только
+                    уровень своей профессиональности, но и уровень обслуживания покупателей. Уникальная система скидок
+                    для постоянных покупателей, разработанная нами и успешно работающая в наших магазинах, прекрасно
+                    сочетается с широким ассортиментом автозапчастей. Самое главное для нас то, чтобы Ваш автомобиль
+                    всегда был в рабочем состоянии, поэтому в наших магазинах Вы найдете все, что для этого нужно, а
+                    наши продавцы с радостью помогут Вам в этом, независимо от того, какой автомобиль у Вас – иномарка
+                    или отечественный.
+                </p>
+            </article>
+        </div>
+    <footer class="footer">
+        &copy <a href=https://github.com/nberezina/metaWebDesign>nberezina</a>
+    </footer>
 </body>
 </html>
