--- a/price.html
+++ b/price.html
@@ -4,20 +4,28 @@
     <meta charset="UTF-8">
     <meta name="description" lang="ru" content="Автозапчасти для иномарок, запчасти для ВАЗ, ГАЗ, Москвич в Нижнем Новгороде - магазин автозапчастей">
     <title>Наши цены</title>
+    <link rel="stylesheet" href="css/basic.css">
 </head>
-<body>
-<header>
-    <h1 > Автозапчасти для иномарок, запчасти для ВАЗ, ГАЗ, Москвич в Нижнем Новгороде - магазин
-        автозапчастей </h1>
-    <nav><h2 >
-        <a href="./index.html">Главная</a>
-        <a href="./price.html">Прайс</a>
-        <a href="./contacts.html">Контакты</a>
-    </h2>
-    </nav>
+<body class="background">
+<header class="header">
+    <h1> Автозапчасти для иномарок, запчасти для ВАЗ, ГАЗ, Москвич в Нижнем Новгороде </h1>
+    <div class="menu">
+        <nav>
+                    <span class="menu-item">
+                    <a href="./index.html">Главная</a>
+                    </span>
+            <span class="menu-item">
+                    <a href="./price.html">Прайс</a>
+                        </span>
+            <span class="menu-item">
+                    <a href="./contacts.html">Контакты</a>
+                        </span>
+        </nav>
+    </div>
 </header>
-<h1>Наши цены</h1>
-<table>
+<div class="content">
+<h2>Наши цены</h2>
+<table class="table">
     <thead>
     <tr>
         <th>Артикул</th>
@@ -44,9 +52,9 @@
     </tr>
     </tbody>
 </table>
-
-<footer>
-        <b > +7 (831) 274-00-77 </b>
+</div>
+<footer class="footer">
+    &copy <a href=https://github.com/nberezina/metaWebDesign>nberezina</a>
 </footer>
 </body>
 </html>
