corrected css in accordance with naming conventions

--- a/contacts.html
+++ b/contacts.html
@@ -7,33 +7,33 @@
     <title>Как нас найти</title>
     <link rel="stylesheet" href="css/basic.css">
 </head>
-<body class="background">
-<header class="header">
-    <h1> Автозапчасти для иномарок, запчасти для ВАЗ, ГАЗ, Москвич в Нижнем Новгороде </h1>
-    <div class="menu">
+<body class="appllication">
+<header class="application__header">
+    <h1 class="application__header__heading"> Автозапчасти для иномарок, запчасти для ВАЗ, ГАЗ, Москвич в Нижнем Новгороде </h1>
+    <div class="application__header__menu">
         <nav>
-            <span class="menu-item"><a href="./index.html">Главная</a></span>
-            <span class="menu-item"><a href="./price.html">Прайс</a></span>
-            <span class="menu-item"><a href="./contacts.html">Контакты</a></span>
+            <span class="application__header__menu__menu-item"><a href="./index.html">Главная</a></span>
+            <span class="application__header__menu__menu-item"><a href="./price.html">Прайс</a></span>
+            <span class="application__header__menu__menu-item"><a href="./contacts.html">Контакты</a></span>
         </nav>
     </div>
 </header>
-<div class="content">
-    <h2> Как нас найти </h2>
-    <p class="caption"> МАГАЗИН 1 - РЯБЦЕВА, 15</p>
+<main class="application__main__content">
+    <h2 class="application__main__content__heading2"> Как нас найти </h2>
+    <p class="application__main__content__caption"> МАГАЗИН 1 - РЯБЦЕВА, 15</p>
 
-    <p><span class="strong-text">Запчасти для марок машин:</span> ВАЗ, НИВА
+    <p><span class="application__main__content__strong-text">Запчасти для марок машин:</span> ВАЗ, НИВА
         Масла, аксессуары, инструмент
     </p>
     <p>
-        <span class="strong-text">Телефоны:</span> 270-56-34, 274-33-46 (многоканальный)<br>
-        <span class="strong-text">Отдел ИНОМАРКА</span><br>
-        <span class="strong-text">Телефоны:</span> 270-56-34, 415-07-80<br>
-        <span class="strong-text">E-mail:</span> filatov_R15@mail.ru<br>
-        <span class="strong-text">ICQ:</span> 632 841 920<br>
+        <span class="application__main__content__strong-text">Телефоны:</span> 270-56-34, 274-33-46 (многоканальный)<br>
+        <span class="application__main__content__strong-text">Отдел ИНОМАРКА</span><br>
+        <span class="application__main__content__strong-text">Телефоны:</span> 270-56-34, 415-07-80<br>
+        <span class="application__main__content__strong-text">E-mail:</span> filatov_R15@mail.ru<br>
+        <span class="application__main__content__strong-text">ICQ:</span> 632 841 920<br>
     </p>
-</div>
-<footer class="footer">
+</main>
+<footer class="application__footer">
     &copy <a href=https://github.com/nberezina/metaWebDesign>nberezina</a>
 </footer>
 </body>
