--- a/index.html
+++ b/index.html
@@ -7,27 +7,26 @@
     <title>Автозапчасти для иномарок, запчасти для ВАЗ, ГАЗ, Москвич в Нижнем Новгороде</title>
     <link rel="stylesheet" href="css/basic.css">
 </head>
-<body class="background">
-    <header class="header">
-        <h1> Автозапчасти для иномарок, запчасти для ВАЗ, ГАЗ, Москвич в Нижнем Новгороде </h1>
-            <div class="menu">
+<body class="appllication">
+    <header class="application__header">
+        <h1 class="application__header__heading"> Автозапчасти для иномарок, запчасти для ВАЗ, ГАЗ, Москвич в Нижнем Новгороде </h1>
+            <div class="application__header__menu">
                 <nav>
-                    <span class="menu-item">
+                    <span class="application__header__menu__menu-item">
                     <a href="./index.html">Главная</a>
                     </span>
-                    <span class="menu-item">
+                    <span class="application__header__menu__menu-item">
                     <a href="./price.html">Прайс</a>
                         </span>
-                    <span class="menu-item">
+                    <span class="application__header__menu__menu-item">
                     <a href="./contacts.html">Контакты</a>
                         </span>
                 </nav>
             </div>
     </header>
-
-    <div class="content">
-            <article><h2>Немного об истории отечественных автозаводов</h2>
-                <p class="article">Количество автомобилей в Нижнем Новгороде увеличивается ежегодно, что порождает постоянный спрос на
+    <main>
+        <article class="application__main__content"><h2 class="application__main__content__heading">Немного об истории отечественных автозаводов</h2>
+                <p class="application__main__content__article">Количество автомобилей в Нижнем Новгороде увеличивается ежегодно, что порождает постоянный спрос на
                     автозапчасти. Спрос растет как на автозапчасти для автомобилей отечественного производства, такие
                     как ВАЗ, ГАЗ, ИЖ, так и на автозапчасти для иномарок. Именно поэтому нашей фирмой создана целая сеть
                     современных магазинов автозапчастей в Нижнем Новгороде. В наших магазинах работают крупные отделы, в
@@ -41,9 +40,9 @@
                     наши продавцы с радостью помогут Вам в этом, независимо от того, какой автомобиль у Вас – иномарка
                     или отечественный.
                 </p>
-            </article>
-        </div>
-    <footer class="footer">
+        </article>
+    </main>
+    <footer class="application__footer">
         &copy <a href=https://github.com/nberezina/metaWebDesign>nberezina</a>
     </footer>
 </body>
