--- a/price.html
+++ b/price.html
@@ -2,58 +2,60 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" lang="ru" content="Автозапчасти для иномарок, запчасти для ВАЗ, ГАЗ, Москвич в Нижнем Новгороде - магазин автозапчастей">
+    <meta name="description" lang="ru"
+          content="Автозапчасти для иномарок, запчасти для ВАЗ, ГАЗ, Москвич в Нижнем Новгороде - магазин автозапчастей">
     <title>Наши цены</title>
     <link rel="stylesheet" href="css/basic.css">
 </head>
-<body class="background">
-<header class="header">
-    <h1> Автозапчасти для иномарок, запчасти для ВАЗ, ГАЗ, Москвич в Нижнем Новгороде </h1>
-    <div class="menu">
+<body class="appllication">
+<header class="application__header">
+    <h1 class="application__header__heading"> Автозапчасти для иномарок, запчасти для ВАЗ, ГАЗ, Москвич в Нижнем
+        Новгороде </h1>
+    <div class="application__header__menu">
         <nav>
-                    <span class="menu-item">
+            <span class="application__header__menu__menu-item">
                     <a href="./index.html">Главная</a>
                     </span>
-            <span class="menu-item">
+            <span class="application__header__menu__menu-item">
                     <a href="./price.html">Прайс</a>
                         </span>
-            <span class="menu-item">
+            <span class="application__header__menu__menu-item">
                     <a href="./contacts.html">Контакты</a>
                         </span>
         </nav>
     </div>
 </header>
-<div class="content">
-<h2>Наши цены</h2>
-<table class="table">
-    <thead>
-    <tr>
-        <th>Артикул</th>
-        <th>Название</th>
-        <th>Производитель</th>
-        <th>Наличие</th>
-        <th>Цена</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-        <td>5284536</td>
-        <td> Вкладыш шатуна верхн. STD (1шт.) ISF2.8</td>
-        <td>CUMMINS</td>
-        <td> 4 ед.</td>
-        <td> 425.00 р. </td>
-    </tr>
-    <tr>
-        <td>5398362</td>
-        <td>Ролик натяжителя Cummins</td>
-        <td>CUMMINS</td>
-        <td>1 ед.</td>
-        <td>2400.00 р</td>
-    </tr>
-    </tbody>
-</table>
-</div>
-<footer class="footer">
+<main class="application__main__content">
+    <h2 class="application__main__content__heading">Наши цены</h2>
+    <table class="application__main__content__table">
+        <thead>
+        <tr>
+            <th class="application__main__content__table__head-cell">Артикул</th>
+            <th class="application__main__content__table__head-cell">Название</th>
+            <th class="application__main__content__table__head-cell">Производитель</th>
+            <th class="application__main__content__table__head-cell">Наличие</th>
+            <th class="application__main__content__table__head-cell">Цена</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td>5284536</td>
+            <td> Вкладыш шатуна верхн. STD (1шт.) ISF2.8</td>
+            <td>CUMMINS</td>
+            <td> 4 ед.</td>
+            <td> 425.00 р.</td>
+        </tr>
+        <tr>
+            <td>5398362</td>
+            <td>Ролик натяжителя Cummins</td>
+            <td>CUMMINS</td>
+            <td>1 ед.</td>
+            <td>2400.00 р</td>
+        </tr>
+        </tbody>
+    </table>
+</main>
+<footer class="application__footer">
     &copy <a href=https://github.com/nberezina/metaWebDesign>nberezina</a>
 </footer>
 </body>
