--- a/index.html
+++ b/index.html
@@ -2,48 +2,68 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Merriweather">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
+
     <meta name="description" lang="ru"
           content="Автозапчасти для иномарок, запчасти для ВАЗ, ГАЗ, Москвич в Нижнем Новгороде">
     <title>Автозапчасти для иномарок, запчасти для ВАЗ, ГАЗ, Москвич в Нижнем Новгороде</title>
     <link rel="stylesheet" href="css/basic.css">
 </head>
 <body class="appllication">
-    <header class="application__header">
-        <h1 class="application__header__heading"> Автозапчасти для иномарок, запчасти для ВАЗ, ГАЗ, Москвич в Нижнем Новгороде </h1>
-            <div class="application__header__menu">
-                <nav>
+<header class="application__header">
+    <h1 class="application__header__heading"> Автозапчасти для иномарок, запчасти для ВАЗ, ГАЗ, Москвич в Нижнем
+        Новгороде </h1>
+    <div class="application__header__menu">
+        <nav>
                     <span class="application__header__menu__menu-item">
                     <a href="./index.html">Главная</a>
                     </span>
-                    <span class="application__header__menu__menu-item">
+            <span class="application__header__menu__menu-item">
                     <a href="./price.html">Прайс</a>
                         </span>
-                    <span class="application__header__menu__menu-item">
+            <span class="application__header__menu__menu-item">
                     <a href="./contacts.html">Контакты</a>
                         </span>
-                </nav>
-            </div>
-    </header>
-    <main>
-        <article class="application__main__content"><h2 class="application__main__content__heading">Немного об истории отечественных автозаводов</h2>
-                <p class="application__main__content__article">Количество автомобилей в Нижнем Новгороде увеличивается ежегодно, что порождает постоянный спрос на
-                    автозапчасти. Спрос растет как на автозапчасти для автомобилей отечественного производства, такие
-                    как ВАЗ, ГАЗ, ИЖ, так и на автозапчасти для иномарок. Именно поэтому нашей фирмой создана целая сеть
-                    современных магазинов автозапчастей в Нижнем Новгороде. В наших магазинах работают крупные отделы, в
-                    которых всегда представлен огромный выбор автозапчастей для иномарок и отечественных автомобилей.
-                    Благодаря плотной и грамотной работе с поставщиками, наша ценовая политика представлена на самом
-                    доступном уровне. Все наши сотрудники проходят постоянное обучение, повышая при этом не только
-                    уровень своей профессиональности, но и уровень обслуживания покупателей. Уникальная система скидок
-                    для постоянных покупателей, разработанная нами и успешно работающая в наших магазинах, прекрасно
-                    сочетается с широким ассортиментом автозапчастей. Самое главное для нас то, чтобы Ваш автомобиль
-                    всегда был в рабочем состоянии, поэтому в наших магазинах Вы найдете все, что для этого нужно, а
-                    наши продавцы с радостью помогут Вам в этом, независимо от того, какой автомобиль у Вас – иномарка
-                    или отечественный.
+        </nav>
+    </div>
+</header>
+<main>
+
+    <div class="card">
+        <div class="card-header">
+            Card Title
+        </div>
+        <div class="card-content">
+            <p>I am a very simple card. I am good at containing small bits of information.
+                I am convenient because I require little markup to use effectively.</p>
+        </div>
+        <div class="card-action">
+            <a href="#">Подробнее</a>
+        </div>
+    </div>
+
+    <div class="card">
+        <div class="card-header">
+            Немного об истории отечественных автозаводов
+        </div>
+        <div class="card-content">
+            <p>Количество автомобилей в Нижнем Новгороде увеличивается ежегодно,
+                что порождает постоянный спрос на
+                автозапчасти. Спрос растет как на автозапчасти для автомобилей отечественного производства, такие
+                как ВАЗ, ГАЗ, ИЖ, так и на автозапчасти для иномарок. Именно поэтому нашей фирмой создана целая сеть
+                современных магазинов автозапчастей в Нижнем Новгороде. В наших магазинах работают крупные отделы, в
+                которых всегда представлен огромный выбор автозапчастей для иномарок и отечественных автомобилей.
                 </p>
-        </article>
-    </main>
-    <footer class="application__footer">
-        &copy <a href=https://github.com/nberezina/metaWebDesign>nberezina</a>
-    </footer>
+        </div>
+        <div class="card-action">
+            <a href="#">Подробнее</a>
+        </div>
+    </div>
+
+</main>
+<footer class="application__footer">
+    &copy <a href=https://github.com/nberezina/metaWebDesign>nberezina</a>
+</footer>
 </body>
 </html>
