added card to index

--- a/index.html
+++ b/index.html
@@ -29,17 +29,17 @@
     </div>
 </header>
 <main>
-
+    <div class="card-container">
     <div class="card">
         <div class="card-header">
-            Card Title
+            Карточка с текстом
         </div>
         <div class="card-content">
             <p>I am a very simple card. I am good at containing small bits of information.
                 I am convenient because I require little markup to use effectively.</p>
         </div>
         <div class="card-action">
-            <a href="#">Подробнее</a>
+            <a class="card-action-link" href="#">Подробнее</a>
         </div>
     </div>
 
@@ -57,13 +57,27 @@
                 </p>
         </div>
         <div class="card-action">
-            <a href="#">Подробнее</a>
+            <a class="card-action-link" href="#">Подробнее</a>
         </div>
     </div>
 
+    <div class="card">
+        <div class="card-header">Карточка с картинкой</div>
+        <div>
+        <img class=card-image" src="img/vesta.jpg">
+        </div>
+        <div class="card-content">
+            <p>I am a very simple card. I am good at containing small bits of information.
+                I am convenient because I require little markup to use effectively.</p>
+        </div>
+        <div class="card-action">
+            <a href="#" class="card-action-link">Подробнее</a>
+        </div>
+    </div>
+    </div>
 </main>
 <footer class="application__footer">
-    &copy <a href=https://github.com/nberezina/metaWebDesign>nberezina</a>
+    &copy <a class="copyright" href=https://github.com/nberezina/metaWebDesign>nberezina</a>
 </footer>
 </body>
 </html>
