added card to index

--- a/contacts.html
+++ b/contacts.html
@@ -5,6 +5,8 @@
     <meta name="description" lang="ru"
           content="Автозапчасти для иномарок, запчасти для ВАЗ, ГАЗ, Москвич в Нижнем Новгороде ">
     <title>Как нас найти</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Merriweather">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
     <link rel="stylesheet" href="css/basic.css">
 </head>
 <body class="appllication">
