--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <div class="card">
         <div class="card-header">Карточка с картинкой</div>
         <div>
-        <img class=card-image" src="img/vesta.jpg">
+        <img class=card-image" src="./img/vesta.jpg">
         </div>
         <div class="card-content">
             <p>I am a very simple card. I am good at containing small bits of information.
