fixed footer and header

--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru" class="main">
 <head>
     <meta charset="UTF-8">
     <script src="./script/main.js" type="text/javascript"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Merriweather">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
-
     <meta name="description" lang="ru"
           content="Автозапчасти для иномарок, запчасти для ВАЗ, ГАЗ, Москвич в Нижнем Новгороде">
     <title>Автозапчасти для иномарок, запчасти для ВАЗ, ГАЗ, Москвич в Нижнем Новгороде</title>
@@ -29,7 +28,7 @@
         </nav>
     </div>
 </header>
-<main>
+<main class="application__main">
     <div class="card-container">
     <div class="card">
         <div class="card-header">
